# ace

./: .gitignore  Makefile  README  README.md  ace.cabal  ace.lock-8.0.1  boris.toml  mafia  master.toml
install/: README  install
main/: Ace.hs  ace.hs  bot.hs  server.hs  simulator.hs
src/: Ace.hs
src/Ace/: Data.hs  Message.hs  Offline.hs  Online.hs  Protocol.hs  Score.hs  Serial.hs  Server.hs  Web.hs
src/Ace/Analysis/: Data.hs  Ledger.hs  Plastic.hs  River.hs  Score.hs
src/Ace/Analysis/Ledger/: Index.hs
src/Ace/Data/: Analysis.hs  Binary.hs  Config.hs  Core.hs  Future.hs  Index.hs  Offline.hs  Online.hs  Protocol.hs  Robot.hs  Setting.hs  Simulation.hs  Web.hs
src/Ace/IO/: Online.hs
src/Ace/IO/Offline/: Client.hs  Server.hs
src/Ace/Protocol/: Error.hs  Read.hs  Write.hs
src/Ace/Random/: Layout.hs
src/Ace/Robot/: Ag.hs  Beaconsfield.hs  Carpe.hs  Charles.hs  Compose.hs  Gold.hs  Ibis.hs  Lannister.hs  Myopia.hs  Pacman.hs  Plastic.hs  Random.hs  Registry.hs  Silver.hs  Venetian.hs
src/Ace/World/: Generator.hs  Registry.hs
test/: test-cli.hs  test.hs
test/Test/Ace/: Data.hs  Gen.hs  Serial.hs  Web.hs
test/Test/Ace/Analysis/: Score.hs
test/Test/Ace/Data/: Web.hs
test/cli/basic-usage/: run
test/cli/chain/: run
test/cli/length/: run
test/cli/offline/: run
test/cli/roundtrip/: run
test/cli/van/: run
webcloud/: ace.css  ace.js  cy.js  index.html  moves.js  world.js
webcloud/games/current/: index.html  moves.txt  world.json
