name:                  ambiata-ace
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2017 Ambiata.
synopsis:              ace
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ace

library
  build-depends:
                      base                            >= 3          && < 5
                    , aeson                           >= 0.8        && < 1.2
                    , ambiata-p
                    , ambiata-x-aeson
                    , hedgehog                        >= 0.5        && < 0.6
                    , text                            == 1.2.*
                    , vector                          >= 0.11       && < 0.13
                    , vector-th-unbox                 == 0.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Ace.Data
                    Ace.Serial
                    Ace.Random.Layout

executable punter
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    main

  main-is:
                    ace.hs

  build-depends:
                      base
                    , ambiata-ace
                    , ambiata-p
                    , ambiata-x-optparse
                    , bytestring                      == 0.10.*
                    , optparse-applicative            >= 0.11       && < 0.15
                    , text                            == 1.2.*


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , aeson
                    , ambiata-ace
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , hedgehog                        == 0.5

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-ace
                    , ambiata-disorder-core
