name:                  ambiata-ace
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2017 Ambiata.
synopsis:              ace
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ace

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , ambiata-x-aeson
                    , ambiata-x-eithert
                    , ambiata-x-show
                    , aeson                           >= 0.8        && < 1.2
                    , base64-bytestring               == 1.*
                    , binary
                    , bytestring                      == 0.10.*
                    , bytestring-lexing               == 0.5.*
                    , clock                           == 0.7.*
                    , containers                      == 0.5.*
                    , directory                       == 1.2.*
                    , filepath                        == 1.4.*
                    , file-embed                      == 0.*
                    , fgl                             == 5.5.*
                    , hedgehog                        >= 0.5        && < 0.6
                    , network-simple                  == 0.4.*
                    , process                         == 1.4.*
                    , pretty-show
                    , random                          == 1.1.*
                    , text                            == 1.2.*
                    , time                            == 1.6.*
                    , transformers                    >= 0.5        && < 0.6
                    , vector                          >= 0.11       && < 0.13
                    , vector-th-unbox                 == 0.2.*
                    , vector-binary-instances

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Ace.Analysis.River
                    Ace.Analysis.Score
                    Ace.Analysis.Plastic
                    Ace.Analysis.Ledger
                    Ace.Analysis.Ledger.Index

                    Ace.Data.Analysis
                    Ace.Data.Binary
                    Ace.Data.Config
                    Ace.Data.Core
                    Ace.Data.Future
                    Ace.Data.Offline
                    Ace.Data.Online
                    Ace.Data.Protocol
                    Ace.Data.Robot
                    Ace.Data.Simulation
                    Ace.Data.Web

                    Ace.IO.Offline.Client
                    Ace.IO.Offline.Server
                    Ace.IO.Online

                    Ace.Protocol.Error
                    Ace.Protocol.Read
                    Ace.Protocol.Write

                    Ace.Robot.Beaconsfield
                    Ace.Robot.Charles
                    Ace.Robot.Lannister
                    Ace.Robot.Gold
                    Ace.Robot.Myopia
                    Ace.Robot.Random
                    Ace.Robot.Registry
                    Ace.Robot.Silver
                    Ace.Robot.Plastic

                    Ace.Serial

                    Ace.Web

                    Ace.World.Generator
                    Ace.World.Registry


executable punter
  ghc-options:
                    -Wall -threaded -O2 -rtsopts "-with-rtsopts=-A128m -n4m"

  hs-source-dirs:
                    main

  main-is:
                    ace.hs

  build-depends:
                      base
                    , ambiata-ace
                    , ambiata-p
                    , ambiata-x-eithert
                    , aeson                           >= 0.8        && < 1.2
                    , bytestring                      == 0.10.*
                    , bytestring-lexing
                    , clock                           == 0.7.*
                    , pretty-show
                    , text                            == 1.2.*

executable punter-bot
  ghc-options:
                    -Wall -threaded -O2 -rtsopts "-with-rtsopts=-A128m -n4m"

  hs-source-dirs:
                    main

  main-is:
                    bot.hs

  build-depends:
                      base
                    , ambiata-ace
                    , ambiata-p
                    , ambiata-x-eithert
                    , aeson                           >= 0.8        && < 1.2
                    , bytestring                      == 0.10.*
                    , bytestring-lexing
                    , text                            == 1.2.*

executable server
  ghc-options:
                    -Wall -threaded -O2 -rtsopts "-with-rtsopts=-A128m -n4m"

  hs-source-dirs:
                    main

  main-is:
                    server.hs

  build-depends:
                      base
                    , ambiata-ace
                    , ambiata-p
                    , ambiata-x-eithert
                    , aeson                           >= 0.8        && < 1.2
                    , bytestring                      == 0.10.*
                    , bytestring-lexing
                    , hedgehog                        == 0.5
                    , text                            == 1.2.*

executable simulator
  ghc-options:
                    -Wall -threaded -O2 -rtsopts "-with-rtsopts=-A128m"

  hs-source-dirs:
                    main

  main-is:
                    simulator.hs

  build-depends:
                      base
                    , ambiata-ace
                    , ambiata-p
                    , ambiata-x-eithert
                    , async
                    , aeson                           >= 0.8        && < 1.2
                    , bytestring                      == 0.10.*
                    , bytestring-lexing
                    , hedgehog                        == 0.5
                    , text                            == 1.2.*


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , aeson
                    , ambiata-ace
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , ambiata-x-aeson
                    , containers                      == 0.5.*
                    , hedgehog                        == 0.5
                    , transformers                    >= 0.5        && < 0.6
                    , vector

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-ace
                    , ambiata-disorder-core
